--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="skill-inner">
-                        <h2 class="text-center">Experience With</h2>
+                        <h2 class="text-center">Skill With</h2>
                         <div class="skill-list">
                             <div class="skill-item"><img src="assets/icon/html.png" alt="html"></div>
                             <div class="skill-item"><img src="assets/icon/css.png" alt="css"></div>
@@ -281,6 +281,36 @@
                         <div class="experience-item" data-aos="fade-up" data-aos-duration="2000">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="experience-title">
+                                    <img src="assets/icon/bootsrap.png" alt="bootsrap">
+                                    <div>
+                                        <h3>professional-grade development with Bootsrap</h3>
+                                        <span class="hidden-learnin__duration">Aug 2024 - Aug 2024</span>
+                                    </div>                               
+                                </div>
+                                <span>Aug 2024 - Aug 2024</span>
+                            </div>
+                            <p>I am highly proficient in using Bootstrap's mobile-first grid system to create websites that work flawlessly across all devices.Skilled in implementing and styling complex Bootstrap components like navbars, modals, and carousels to match unique design requirements.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="experience-item" data-aos="fade-up" data-aos-duration="2000">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="experience-title">
+                                    <img src="assets/icon/tailwind.png" alt="tailwind">
+                                    <div>
+                                        <h3>Tailwind’s utility-first framework for rapid development</h3>
+                                        <span class="hidden-learnin__duration">Dec 2024 - Dec 2024</span>
+                                    </div>                               
+                                </div>
+                                <span>Dec 2024 - Dec 2024</span>
+                            </div>
+                            <p>Expert in creating pixel-perfect, unique layouts by leveraging arbitrary values and custom theme configurations. Skilled in implementing advanced hover effects, transitions, and dark mode features to enhance the overall user experience.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="experience-item" data-aos="fade-up" data-aos-duration="2000">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="experience-title">
                                     <img src="assets/icon/js.png" alt="js">
                                     <div>
                                         <h3>JavaScript to create interactive and dynamic Website</h3>
@@ -290,6 +320,21 @@
                                 <span>Aug 2024 - Nov 2024</span>
                             </div>
                             <p>I excel at using JavaScript to create interactive and dynamic user experiences that bring websites to life. Highly proficient in manipulating the Document Object Model (DOM) and handling complex events for seamless UI interaction. Experienced in implementing and customizing JavaScript libraries and jQuery plugins to solve specific design challenges.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="experience-item" data-aos="fade-up" data-aos-duration="2000">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div class="experience-title">
+                                    <img src="assets/icon/jquery.png" alt="jquery">
+                                    <div>
+                                        <h3>JavaScript to create interactive and dynamic Website</h3>
+                                        <span class="hidden-learnin__duration">Aug 2024 - Nov 2024</span>
+                                    </div>
+                                </div>
+                                <span>Aug 2024 - Nov 2024</span>
+                            </div>
+                            <p>Jquery to add smooth animations and interactive features to websites. Implementing and customizing third-party jQuery plugins for advanced functionality. Managing user interactions like clicks, hovers, and form submissions efficiently.</p>
                         </div>
                     </div>
                 </div>
